soldout以外の設定完了

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -120,30 +120,34 @@
       新規投稿商品
     </div>
     <ul class='item-lists'>
-      <%#<%  @items.each do |item| %>
-         <%#<li class='list'>
-           <%#<%= link_to "#" do %>
-           <%#<div class='item-img-content'>
-             <%#<%= image_tag item.image.variant(resize: '500x500'), class: 'item-img' if item.image.attached? %>
+    
+      <%  @items.each do |item| %>
+          <li class='list'>
+            <%= link_to "#" do %>
+            <div class='item-img-content'>
+              <%= image_tag item.image.variant(resize: '500x500'), class: 'item-img' if item.image.attached? %>
+            </div>
 
-           <%#</div>
-           <%#<div class='item-info'>
-             <%#<h3 class='item-name'>
-               <%#<%= item.name %>
-             <%#</h3>
-             <%#<div class='item-price'>
-               <%#<span><%= item.item_price %> <%#<br> <% shipmentfee = Shipmentfee.find_by(id: item.shipmentfee_id) %>
-              <%#<span><%= shipmentfee&.name %> <%#</span> </span><br>
+              <%#ここにsold out設定%>
 
-               <%#<div class='star-btn'>
-                 <%#<%= image_tag "star.png", class:"star-icon" %>
-                 <%#<span class='star-count'>0</span>
-               <%#</div>
-             <%#</div>
-           <%#</div>
-           <%#<% end %>
-         <%#</li>
-       <%#<% end %>
+                <div class='item-info'>
+                    <h3 class='item-name'>
+                      <%= item.name %>
+                    </h3>
+                    <div class='item-price'>
+                      <span><%= item.item_price %>円<br> <% shipmentfee = Shipmentfee.find_by(id: item.shipmentfee_id) %>
+                      <span><%= shipmentfee&.name %></span> </span><br>
+
+                      <div class='star-btn'>
+                        <%= image_tag "star.png", class:"star-icon" %>
+                        <span class='star-count'>0</span>
+                      </div>
+                    </div>
+                </div>
+            <% end %>
+          </li>
+      <% end %>
+
 
             <%# 商品が売れていればsold outを表示しましょう 次の実装の設定 %>
             <%#div class='sold-out'>
@@ -154,23 +158,26 @@
 
       <%# 商品がない場合は以下のダミー商品が表示されるようにしましょう 次の実装の設定%>
       <%# 商品がある場合は表示されないようにしましょう %>
-      <li class='list'>
-        <%= link_to '#' do %>
-        <%= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "item-img" %>
-        <div class='item-info'>
-          <h3 class='item-name'>
-            商品を出品してね！
-          </h3>
-          <div class='item-price'>
-            <span>99999999円<br>(税込み)</span>
-            <div class='star-btn'>
-              <%= image_tag "star.png", class:"star-icon" %>
-              <span class='star-count'>0</span>
+      <%if @items.empty?%>
+        <li class='list'>
+          <%= link_to '#' do %>
+          <%= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "item-img" %>
+          <div class='item-info'>
+            <h3 class='item-name'>
+              商品を出品してね！
+            </h3>
+            <div class='item-price'>
+              <span>99999999円<br>(税込み)</span>
+              <div class='star-btn'>
+                <%= image_tag "star.png", class:"star-icon" %>
+                <span class='star-count'>0</span>
+              </div>
             </div>
           </div>
-        </div>
-        <% end %>
-      </li>
+          <% end %>
+        </li>
+      <%else%>
+      <%end%>
       <%# //商品がある場合は表示されないようにしましょう %>
       <%# //商品がない場合は以下のダミー商品が表示されるようにしましょう %>
     </ul>
