--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -32,7 +32,7 @@
     </div>
 
    
-    <%= form_with model: @order_address, url: item_orders_path(@item.id), id: 'charge-form', class: 'transaction-form-wrap', local: true do |f| %> 
+    <%= form_with model: @order_address, url: item_orders_path(@item.id), data: { turbo: false }, id: 'charge-form', class: 'transaction-form-wrap', local: true do |f| %> 
 
       <%= render 'shared/error_messages', model: f.object %>
 
